Ajustes no gitiginore e add makefile

--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,12 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+
+# jekyll and Ruby
+*.gem
+.bundle
+.jekyll-cache
+.sass-cache
+_site
+Gemfile.lock
