--- a/ecommerce/_config.yml
+++ b/ecommerce/_config.yml
@@ -4,7 +4,7 @@ url: "https://ecommerce-raw-bart.s3.us-east-1.amazonaws.com"
 
 # Profile information
 author: "Cesar Augusto"
-title: ""
+title: "Home Page"
 
 # Meta Tag
 description: > # this means to ignore newlines until "baseurl:"
@@ -28,8 +28,7 @@ plugins:
   - jekyll-datapage-generator  
 
 page_gen:
-  - index_files: true
-    data: products
+  - data: products
     template: product
     name: sku
     dir: products
