Ajustes no site ecommerce

--- a/ecommerce/Makefile
+++ b/ecommerce/Makefile
@@ -11,5 +11,15 @@ dependency: ## Instalação das dependencias
 install: ## Instalação do projeto
 	@bundle install
 
+
+build: ## Compilação do site final
+	@rm -fr ./_site && \
+		JEKYLL_ENV=production bundle exec jekyll build
+
+deploy: ## Deploy e-commerce in AWS S3 bucket
+	@aws s3 sync --delete --profile=bart-recs \
+		./_site s3://ecommerce-raw-bart
+	@echo "Acesse http://ecommerce-raw-bart.s3-website-us-east-1.amazonaws.com"
+
 runserver: ## Inicia o servidor Jekyll local no endereço 'http://localhost:4000'
 	@bundle exec jekyll serve
