Rename packages and add comands in makefile

--- a/infrastructure/sources/Makefile
+++ b/infrastructure/sources/Makefile
@@ -3,9 +3,11 @@
 help:  ## This help
 	@awk 'BEGIN {FS = ":.*?## "} /^[a-zA-Z_-]+:.*?## / {printf "\033[36m%-20s\033[0m %s\n", $$1, $$2}' $(MAKEFILE_LIST)
 
-package-bart-simulator:
-	@pip install bart-simulator -t ./tmp && \
-		cd ./tmp && zip -r ../bart-simulator-lambda.zip .
-	@cd ./bart-simulator-lambda && zip -r ../bart-simulator-lambda.zip .
-	@rm -r ./tmp 
+_package:
+	@cd ./${folder} && zip -r ../${folder}-lambda.zip .
 
+package-api-authorizer: ## Gerar o pacote para o Lambda do api-authorizer
+	@_package folder="lambda-api-authorizer"
+
+package-recommendations: ## Gerar o pacote para o Lambda do bart-recommendations
+	@_package folder="bart-recommendations"
